<resources>
    <string name="app_name">StoreApp</string>
    <string name="create_supplier">Create New Supplier</string>
    <string name="download">Download</string>
    <string name="report">Report</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="supplied_material">Supplied Material</string>
    <string name="browse">browse</string>
    <string name="save">save</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>


    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="received">Received</string>
    <string name="consumed">Consumed</string>
    <string name="date">Date</string>
    <string name="invoice_no">Invoice No</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="material_received_date">Material Received Date</string>
    <string name="received_material_name">Received Material Name</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="select_material_received_date">Select Material Received Date</string>
    <string name="quantity">Quantity</string>
    <string name="yes">Yes</string>
    <string name="issue_to">Issue To</string>
    <string name="where_used">Where Used</string>
    <string name="material_consumption_date">Material Consumption Date</string>
    <string name="material_name">Material Name</string>
    <string name="select_material_consumption_date">Select Material Consumption Date</string>
    <string name="transaction_count">Transaction Count</string>
    <string name="received_detail">Received Detail</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="received_date">Received Date</string>
    <string name="total_supplied">Total Supplied</string>
    <string name="select_transaction_date">Select Transaction Date</string>
    <string name="consume_detail">Consumed Detail</string>
    <string name="received_entry">Received Entry</string>
    <string name="consumption_entry">Consumption Entry</string>
    <string name="supplier_photo">Supplier Photo</string>
</resources>
